// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borrow book copy 1`] = `
Object {
  "book": Object {
    "id": "MS1Cb29r",
    "title": "Time of contempt",
  },
  "borrower": Object {
    "id": "MS1Vc2Vy",
    "name": "Bob",
  },
  "id": "MS1Cb29rQ29weQ==",
  "owner": Object {
    "id": "Mi1Vc2Vy",
    "name": "Alice",
  },
}
`;

exports[`return book copy 1`] = `
Object {
  "book": Object {
    "id": "MS1Cb29r",
    "title": "Maxime Qui Adipisci Qui",
  },
  "borrower": null,
  "id": "MS1Cb29rQ29weQ==",
  "owner": Object {
    "email": "alice@email.com",
    "id": "Mi1Vc2Vy",
    "name": "Alice",
  },
}
`;
